--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -62,6 +62,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:background="#FFFFFF"
         android:layout_height="0dp"
         android:layout_weight="0.7">
 
